--- a/misogynistic_text_detector_bert.ipynb
+++ b/misogynistic_text_detector_bert.ipynb
@@ -33,8 +33,7 @@
       "source": [
         "![nirbhaya](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSG_Exwl5cgaL7gM4y2TCC-qvOHRQWmzBqGQw&usqp=CAU)![feminist_philosophy](https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Feminist_philosophy.svg/100px-Feminist_philosophy.svg.png)\n",
         "\n",
-        "This notebook demonstrates how to build a misogynistic text classifier using custom TensorFlow estimators, embeddings and the [tf.layers](https://www.tensorflow.org/api_docs/python/tf/layers) module. Along the way we'll learn about word2vec and transfer learning as a technique to bootstrap model performance when labeled data is a scarce resource.\n",
-        "\n"
+        "This notebook demonstrates how to build a misogynistic text classifier using transfer learning from BERT as a technique to bootstrap model performance when labeled data is a scarce resource.\n",
       ]
     },
     {
