Detailed description of BERT
Add the abstract from arxiv in addition to full details about the model we will be leveraging transfer learning from.

--- a/misogynistic_text_detector_bert.ipynb
+++ b/misogynistic_text_detector_bert.ipynb
@@ -33,7 +33,16 @@
       "source": [
         "![nirbhaya](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSG_Exwl5cgaL7gM4y2TCC-qvOHRQWmzBqGQw&usqp=CAU)![feminist_philosophy](https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Feminist_philosophy.svg/100px-Feminist_philosophy.svg.png)\n",
         "\n",
-        "This notebook demonstrates how to build a misogynistic text classifier using transfer learning from BERT as a technique to bootstrap model performance when labeled data is a scarce resource.\n",
+        "This notebook demonstrates how to build a misogynistic text classifier using tranfer learning from Bidirectional Encoder Representations from Transformers (BERT).  \n",
+        "\n",
+        "Abstract @ [arxiv.org/abs/1810.04805](https://arxiv.org/abs/1810.04805):\n",
+        "\n",
+        "> We introduce a new language representation model called BERT, which stands for Bidirectional Encoder Representations from Transformers. Unlike recent language representation models, BERT is designed to pre-train deep bidirectional representations from unlabeled text by jointly conditioning on both left and right context in all layers. As a result, the pre-trained BERT model can be fine-tuned with just one additional output layer to create state-of-the-art models for a wide range of tasks, such as question answering and language inference, without substantial task-specific architecture modifications.\n",
+        "BERT is conceptually simple and empirically powerful. It obtains new state-of-the-art results on eleven natural language processing tasks, including pushing the GLUE score to 80.5% (7.7% point absolute improvement), MultiNLI accuracy to 86.7% (4.6% absolute improvement), SQuAD v1.1 question answering Test F1 to 93.2 (1.5 point absolute improvement) and SQuAD v2.0 Test F1 to 83.1 (5.1 point absolute improvement).\n",
+        "\n",
+        "We use pre-trained weights from the `TF2.0 Saved Model` https://tfhub.dev/tensorflow/bert_en_cased_L-24_H-1024_A-16/3. The pre-trained model uses `L=24` hidden layers (i.e., Transformer blocks), a hidden size of `H=1024`, and `A=16` attention heads.\n",
+        "\n",
+        "This model has been pre-trained for English on the Wikipedia and BooksCorpus. Text inputs have been normalized the \"cased\" way (important since the tagged misogynistic dataset is \"cased\"), meaning that the distinction between lower and upper case as well as accent markers have been preserved. For training, random input masking has been applied independently to word pieces (as in the original BERT paper).\n"
       ]
     },
     {
@@ -361,7 +370,7 @@
       },
       "source": [
         "%%time\n",
-        "module_url = \"https://tfhub.dev/tensorflow/bert_en_cased_L-24_H-1024_A-16/2\"\n",
+        "module_url = \"https://tfhub.dev/tensorflow/bert_en_cased_L-24_H-1024_A-16/3\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
       "execution_count": 28,
@@ -431,34 +440,6 @@
             "__________________________________________________________________________________________________\n"
           ],
           "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WTs7QTBWL7hx",
-        "outputId": "384e14c9-6f4f-497b-c52b-f13f22270ff9"
-      },
-      "source": [
-        "misogynistic_df.columns"
-      ],
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['Definition', 'is_misogyny'], dtype='object')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 33
         }
       ]
     },
